<resources>
    <string name="app_name">HurdlingApp</string>
    <string name="recordVideo">Kuvaa video</string>
    <string name="watchAnalysis">Katso analyysi</string>
    <string name="SendToAnalysis">Lähetä analyysiin</string>
    <string name="Gap12">Aitaväli 1-2</string>
    <string name="Gap23">Aitaväli 2-3</string>
    <string name="Gap34">Aitaväli 3-4</string>
    <string name="FenceSpacing">Aitavälin pituus senttimetreinä</string>
    <string name="FenceHeight">Aitavälin korkeus senttimetreinä</string>
    <string name="SavedFileName">Tiedosto tallennetaan nimellä: </string>
    <string name="StartPosition">Alkupiste</string>
    <string name="EndPosition">Loppupiste</string>
    <string name="CutAndSend">Leikkaa ja lähetä</string>
    <string name="SearchParameters">Lisää hakuparametrit</string>
</resources>
